# compgeom

./: .gitignore  CMakeLists.txt  README.md
algorithms/: CMakeLists.txt
algorithms/task1/: CMakeLists.txt
algorithms/task1/include/task1/: point_segment.hpp
algorithms/task1/src/: point_segment.cpp
algorithms/task10/: CMakeLists.txt
algorithms/task10/include/task10/: polygon_boolean.hpp
algorithms/task10/src/: polygon_boolean.cpp
algorithms/task11/: CMakeLists.txt
algorithms/task11/include/task11/: point_locator.hpp
algorithms/task11/src/: point_locator.cpp
algorithms/task12/: CMakeLists.txt
algorithms/task12/include/task12/: point_locator.hpp
algorithms/task12/src/: point_locator.cpp
algorithms/task2/: CMakeLists.txt
algorithms/task2/include/task2/: segment_intersection.hpp
algorithms/task2/src/: segment_intersection.cpp
algorithms/task3/: CMakeLists.txt
algorithms/task3/include/task3/: point_segment_ld.hpp
algorithms/task3/src/: point_segment_ld.cpp
algorithms/task4/: CMakeLists.txt
algorithms/task4/include/task4/: convex_hull.hpp
algorithms/task4/src/: convex_hull.cpp
algorithms/task5/: CMakeLists.txt
algorithms/task5/include/task5/: delaunay.hpp
algorithms/task5/src/: delaunay.cpp
algorithms/task789/: CMakeLists.txt
algorithms/task789/include/task789/: convex_boolean.hpp
algorithms/task789/src/: convex_boolean.cpp
qt/: CMakeLists.txt
qt/polybool_common/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main_window.cpp  main_window.h
qt/task1/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp
qt/task10/: CMakeLists.txt  main.cpp
qt/task11/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp  main_window.cpp  main_window.h
qt/task12/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp  main_window.cpp  main_window.h
qt/task2/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp  main_window.cpp  main_window.h
qt/task3/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp  main_window.cpp  main_window.h
qt/task4/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  mainwindow.cpp  mainwindow.h
qt/task5/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp  mainwindow.cpp  mainwindow.h
qt/task789/: CMakeLists.txt  canvas_model.cpp  canvas_model.h  canvas_widget.cpp  canvas_widget.h  main.cpp  mainwindow.cpp  mainwindow.h
